syntax = "proto3";

package NExampleApps;

option go_package = "a.yandex-team.ru/alice/megamind/example_apps/go/apps/proto;apps_proto";
option java_package = "ru.yandex.alice.megamind.example_apps.go.apps.proto";
option java_outer_classname = "TestProto";

message TMementoPayload {
    string RequestId = 1;
    int64 Timestamp = 2;
    int64 Counter = 3;
}
